--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<li>Coffee</li>
 						<li>Beer</li>
 						<li>APIs</li>
+						<li>Developer with Tandum.com</li>
 					</ul>
 				</section>
 
@@ -62,7 +63,8 @@
 					<section>
 						<h2>Clean API Structure</h2>
 						<p>example: GET /v1/restaurants/{$city}</p>
-						<p>example: POST /v2/users/students/{$id}</p>
+						<p>example: POST /v2/users/students/{$id}/{$classId}</p>
+						<p>example: PUT /v1/users/{$id}/edit
 					</section>
 					<section>
 						<h2>Well written documentation</h2>
@@ -97,20 +99,38 @@
 				<section>
 					<h1>GET</h1>
 					<p>Will return a resource</p>
-					<p>User, Location, 
+					<p>User, Location, Event Details</p>
 				</section>
 				<section>
 					<h1>POST</h1>
+					<p>Creating a resource on the server.</p>
 				</section>
 				<section>
 					<h1>PUT</h1>
+					<p>Replacing a resource on the server</p>
 				</section>
 				<section>
 					<h1>PATCH</h1>
+					<p>Updating a resource on the server.</p>
 				</section>
 				<section>
 					<h1>DELETE</h1>
+					<p>Removes resource from server.</p>
+					<small>You should never delete a resource, just change the state in the tables. </small>
 				</section>
+				<section>
+					<h1>Protect your api</h1>
+					<p>Use a UUID library.</p>
+					<p>Properly auth users with tokens &amp; OAuth.</p>
+					<p>Throttle to protect bandwidth.</p>
+				</section>
+				<section>
+					<h1>Questions</h1>
+					<ul>
+						<li>Twitter: matthewtrask</li>
+						<li>IRC: matthewtrask_</li>
+						<li>Email: mjftrask@gmail.com</li>
+					</ul>
 
 			</div>
 
