added image of ed and more slides

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
 					<p>Be kind to everyone</p>
 				</section>
 				<section>
+					<h2>Disclaimer</h2>
+					<p>Not a doctor</p>
+				</section>
+				<section>
 					<h2>My Story</h2>
 				</section>
 				<section>
@@ -90,10 +94,16 @@
 						<h2>Awkward Audience Participation</h2>
 					</section>
 					<section>
+						<h4>Friday 3:30pm: Boss sends an email..  "hey lets meet first thing monday"</h4>
+					</section>
+					<section>
 						<h4>Do you wear glasses or contacts?</h4>
 					</section>
 					<section>
 						<h4>How many people have had someone near them fight cancer?</h4>
+					</section>
+					<section>
+						<h4>How many people have or have had mental illness affect them?</h4>
 					</section>
 					<section>
 						<h4>How many people would feel comfortable talking to your boss about a mental health condition?</h4>
@@ -154,6 +164,9 @@ Symptoms include limited attention and hyperactivity.</p>
 					<h2>A long time ago (2013), in a galaxy far far away...</h2>
 				</section>
 				<section>
+					<img src="img/ed.png"><br>
+				</section>
+				<section>
 					<h2>Since then:</h2>
 					<p>Countless user groups</p>
 					<p>Countless conferences</p>
@@ -195,6 +208,24 @@ Symptoms include limited attention and hyperactivity.</p>
 					<section>
 						<p>"The more we can get these stories out there, the better chance we have of influencing general public perception, and most importantly, helping others who suffer to try to get help."</p>
 						<p>Anonymous - osmihelp.org</p>
+					</section>``
+					<section>
+						<p>"I've watched so many OSMI talks and broken down crying as I listened to people share some of their stories. Plus, the people behind OSMI are some of the nicest people I've ever met."</p>
+						<p>@jennaskiezz</p>
+					</section>
+					<section>
+						<section>
+							<h2>As a ____ what can I do to help?</h2>
+						</section>
+						<section>
+							<h2>Manager</h2>
+						</section>
+						<section>
+							<h2>Coworker</h2>
+						</section>
+						<section>
+							<h2>Friend</h2>
+						</section>
 					</section>
 					<section>
 						<h2>Questions?</section>
